// ============================================================
// DATABASE: enmerce_payment
// PCI-DSS scope — NO PAN storage, tokenized only
// Marketplace settlement for merchant payouts
// Visualize: paste vào https://dbdiagram.io
// ============================================================

Project enmerce_payment {
  database_type: 'PostgreSQL'
  Note: '''
    # Payment Database
    PCI-DSS compliant. NO PAN stored — only PSP tokens.
    Idempotency keys for replay attack prevention.
    Marketplace settlement: platform thu hộ → trừ hoa hồng → chuyển cho merchant.
    HMAC on audit logs for tamper detection.
  '''
}

Table payment_methods {
  id                     uuid [pk, default: `gen_random_uuid()`]
  user_id                uuid [not null]
  method_type            varchar(30) [not null, note: 'credit_card|debit_card|bank_transfer|e_wallet|cod']
  psp_provider           varchar(30) [not null, default: 'stripe']
  psp_payment_method_id  varchar(255) [not null, note: 'Stripe pm_xxx — NOT a PAN']
  psp_customer_id        varchar(255) [note: 'Stripe cus_xxx']
  card_last4             char(4) [note: 'display only']
  card_brand             varchar(20) [note: 'visa|mastercard|jcb']
  card_fingerprint       varchar(255) [note: 'detect duplicate cards']
  billing_name_encrypted bytea [note: '🔒 FLE']
  billing_email_encrypted bytea [note: '🔒 FLE']
  is_default             boolean [not null, default: false]
  is_verified            boolean [not null, default: false]
  status                 varchar(20) [not null, default: 'active', note: 'active|expired|revoked']
  created_at             timestamptz [not null, default: `now()`]
  updated_at             timestamptz [not null, default: `now()`]
  deleted_at             timestamptz

  indexes {
    (user_id, status) [name: 'idx_pm_user', note: 'WHERE status = active']
    (card_fingerprint) [name: 'idx_pm_fingerprint']
  }
}

Table payment_transactions {
  id                  uuid [pk, default: `gen_random_uuid()`]
  order_id            uuid [not null]
  user_id             uuid [not null]
  merchant_id         uuid [not null]
  payment_method_id   uuid [ref: > payment_methods.id]
  transaction_type    varchar(20) [not null, note: 'charge|cod_collect']
  status              varchar(20) [not null, default: 'pending', note: 'pending|processing|succeeded|failed|cancelled']
  amount              decimal(15,2) [not null, note: '> 0']
  currency_code       char(3) [not null, default: 'VND']
  psp_provider        varchar(30) [not null, default: 'stripe']
  psp_transaction_id  varchar(255) [note: 'Stripe pi_xxx or ch_xxx']
  psp_status          varchar(50) [note: 'raw PSP status']
  psp_response        jsonb [note: 'full PSP response (masked)']
  psp_fee             decimal(15,2) [note: 'processing fee']
  three_ds_status     varchar(20) [note: '3DS/SCA status']
  three_ds_version    varchar(10)
  authentication_type varchar(30)
  fraud_trace_id      varchar(255) [note: 'ELK correlation ID — no Fraud DB, logs in ELK']
  fraud_score         decimal(5,4) [note: 'from stateless Fraud Service via Kafka']
  idempotency_key     varchar(255) [unique, not null, note: 'STRIDE S-PAY-02: anti-replay']
  failure_code        varchar(100)
  failure_message     text
  ip_address          inet [note: 'non-repudiation']
  user_agent          text
  device_fingerprint  varchar(255)
  paid_at             timestamptz [note: 'khi charge succeeded']
  failed_at           timestamptz
  created_at          timestamptz [not null, default: `now()`]
  updated_at          timestamptz [not null, default: `now()`]

  indexes {
    (order_id) [name: 'idx_pt_order']
    (user_id, created_at) [name: 'idx_pt_user']
    (psp_transaction_id) [name: 'idx_pt_psp']
    (status) [name: 'idx_pt_status', note: 'WHERE status = pending']
    (idempotency_key) [name: 'idx_pt_idemp']
  }
}

Table idempotency_keys {
  key           varchar(255) [pk]
  request_path  varchar(500) [not null]
  request_hash  varchar(64) [not null, note: 'SHA-256 of request body']
  response_code int
  response_body jsonb
  status        varchar(20) [not null, default: 'processing', note: 'processing|completed|failed']
  created_at    timestamptz [not null, default: `now()`]
  expires_at    timestamptz [not null, default: `now() + interval ''24 hours''`]

  indexes {
    (expires_at) [name: 'idx_idemp_expires']
  }
}

Table psp_webhook_log {
  id               uuid [pk, default: `gen_random_uuid()`]
  psp_provider     varchar(30) [not null]
  event_type       varchar(100) [not null, note: 'payment_intent.succeeded']
  event_id         varchar(255) [not null, note: 'Stripe event ID']
  payload          jsonb [not null]
  signature        text [not null, note: 'webhook HMAC signature']
  is_verified      boolean [not null, default: false]
  is_processed     boolean [not null, default: false]
  processing_error text
  received_at      timestamptz [not null, default: `now()`]
  processed_at     timestamptz

  indexes {
    (psp_provider, event_id) [unique]
    (is_processed) [name: 'idx_wh_unprocessed', note: 'WHERE NOT is_processed']
  }
}

// ─── MERCHANT SETTLEMENT ────────────────────────────────────
// Marketplace model: buyer trả tiền cho platform → platform giữ →
// cuối kỳ tính hoa hồng → chuyển phần còn lại cho merchant.

Table merchant_settlements {
  id                  uuid [pk, default: `gen_random_uuid()`]
  merchant_id         uuid [not null, note: 'cross-service ref to Catalog merchant']
  period_start        date [not null, note: 'ngày bắt đầu kỳ settlement']
  period_end          date [not null, note: 'ngày kết thúc kỳ settlement']
  total_orders        int [not null, default: 0, note: 'số đơn hàng delivered trong kỳ']
  total_sales         decimal(15,2) [not null, default: 0, note: 'tổng doanh thu']
  total_shipping_fee  decimal(15,2) [not null, default: 0, note: 'tổng phí ship buyer trả']
  total_psp_fee       decimal(15,2) [not null, default: 0, note: 'tổng phí PSP (Stripe 2.9%+30¢)']
  commission_rate     decimal(5,4) [not null, note: 'tỉ lệ hoa hồng tại thời điểm settlement (snapshot)']
  commission_amount   decimal(15,2) [not null, note: 'platform giữ lại = total_sales × commission_rate']
  net_amount          decimal(15,2) [not null, note: 'merchant nhận = total_sales - commission - psp_fee']
  currency_code       char(3) [not null, default: 'VND']
  status              varchar(20) [not null, default: 'pending', note: 'pending|processing|paid|failed']
  payment_method      varchar(30) [note: 'bank_transfer|e_wallet']
  payment_reference   varchar(255) [note: 'bank transfer reference number']
  paid_at             timestamptz
  notes               text
  created_at          timestamptz [not null, default: `now()`]
  updated_at          timestamptz [not null, default: `now()`]

  indexes {
    (merchant_id, period_start) [unique, note: 'mỗi merchant chỉ có 1 settlement per period']
    (merchant_id, status) [name: 'idx_settle_merchant']
    (status) [name: 'idx_settle_status', note: 'WHERE status = pending']
    (period_end) [name: 'idx_settle_period']
  }

  Note: '''
    Marketplace settlement: platform thu hộ buyer → cuối kỳ (tuần/2 tuần)
    tính toán và chuyển tiền cho merchant.
    Flow: Cron job cuối kỳ → query payment_transactions (succeeded, delivered)
    → tính commission → tạo settlement record → trigger bank transfer.
    Chỉ tính đơn hàng đã delivered (không tính pending/cancelled).
    commission_rate snapshot tại thời điểm settlement (không dùng rate hiện tại
    của merchant, phòng trường hợp rate thay đổi giữa kỳ).
  '''
}

Table settlement_items {
  id              uuid [pk, default: `gen_random_uuid()`]
  settlement_id   uuid [not null, ref: > merchant_settlements.id]
  order_id        uuid [not null, note: 'cross-service ref to Order']
  transaction_id  uuid [not null, ref: > payment_transactions.id]
  order_amount    decimal(15,2) [not null, note: 'giá trị đơn hàng']
  shipping_fee    decimal(15,2) [not null, default: 0]
  psp_fee         decimal(15,2) [not null, default: 0]
  commission      decimal(15,2) [not null, note: 'hoa hồng cho đơn này']
  merchant_payout decimal(15,2) [not null, note: 'merchant nhận cho đơn này']
  created_at      timestamptz [not null, default: `now()`]

  indexes {
    (settlement_id) [name: 'idx_si_settlement']
    (order_id) [unique, note: 'mỗi order chỉ thuộc 1 settlement']
  }

  Note: 'Chi tiết từng đơn hàng trong 1 kỳ settlement. Cho phép merchant xem breakdown.'
}

// ─── AUDIT LOG ──────────────────────────────────────────────

Table payment_audit_log {
  id               uuid [pk, default: `gen_random_uuid()`]
  table_name       varchar(100) [not null, note: 'payment_methods|payment_transactions|merchant_settlements']
  record_id        uuid [not null, note: 'PK of affected record']
  action           varchar(10) [not null, note: 'INSERT|UPDATE|DELETE']
  old_data         jsonb [note: 'state trước khi thay đổi (NULL for INSERT)']
  new_data         jsonb [note: 'state sau khi thay đổi (NULL for DELETE)']
  changed_fields   text[] [note: 'list of changed column names — fast filtering']
  actor_id         uuid [note: 'user/admin/system who made the change']
  actor_type       varchar(20) [note: 'user|merchant|admin|system|migration']
  ip_address       inet [note: 'STRIDE R: non-repudiation']
  user_agent       text
  correlation_id   varchar(255) [note: 'ELK trace_id — bidirectional PG ↔ ELK tracing']
  hmac_signature   varchar(128) [note: 'STRIDE T-DB-02: tamper detection via Vault Transit']
  hmac_key_version int [not null, default: 1, note: 'Vault key version for rotation support']
  created_at       timestamptz [not null, default: `now()`]

  indexes {
    (table_name, record_id) [name: 'idx_pay_audit_record']
    (actor_id) [name: 'idx_pay_audit_actor']
    (created_at) [name: 'idx_pay_audit_time']
  }

  Note: '''
    Append-only, partitioned by RANGE(created_at) monthly.
    HMAC via Vault Transit API (key KHÔNG rời Vault — PCI-DSS).
    Tracks: payment_methods, payment_transactions, merchant_settlements.
    Settlement audit đặc biệt quan trọng: ai approve payout, status changes.
    Retention: 7 năm (Hot 12m → Warm 36m → Cold 84m).
    Populated by PostgreSQL trigger (hybrid approach).
  '''
}
